# QTCalculator

./: CMakeLists.txt  README.md  calculator_panel.cpp  calculator_panel.h  main.cpp  main_window.cpp  res.qrc
src/: main.cpp
src/headers/: button_info.h  calculator_panel.h  expression_info.h  main_window.h  round_button.h  screen_panel.h
src/headers/info/: button_info.h
src/headers/widget/: round_button.h  screen_panel.h
src/sources/: button_info.cpp  calculator_panel.cpp  main_window.cpp  round_button.cpp  screen_panel.cpp  tinyexpr.c
src/sources/core/: tinyexpr.c
src/sources/info/: button_info.cpp
src/sources/widget/: calculator_panel.cpp  round_button.cpp  screen_panel.cpp
